# chrop

./: LICENSE  README.md  __main__.py  diseno.py  pyproject.toml
src/chrop/: __init__.py  __main__.py  diseno.py
src/chrop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
