[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrop"
version = "1.0.0"
description = "Herramientas de diseño óptimo y matrices de información."
authors = [{ name = "Jiaming He Wu" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "sympy>=1.12",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/JmMMII/chrop"

[project.scripts]
chrop = "chrop.__main__:main"
